--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Check Multiple Checkboxes</title>
 </head>
 <body>
-    
+    <div class="checkbox">
+        <div class="item">
+            <input type="checkbox" id="check1">
+            <label for="check1">Hello</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check2">
+            <label for="check2">Hola</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check3">
+            <label for="check3">Konnichiwa</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check4">
+            <label for="check4">Bon Jour</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check5">
+            <label for="check5">Ni Hao</label>
+        </div>
+    </div>
 </body>
 </html>
