Add event listener to click checkboxes.

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
             <label for="check5">Ni Hao</label>
         </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
