--- a/index.html
+++ b/index.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Check Multiple Checkboxes</title>
 </head>
 <body>
     <div class="checkbox">
         <div class="item">
             <input type="checkbox" id="check1">
-            <label for="check1">Hello</label>
+            <label for="check1">This is an checkbox layout.</label>
         </div>
         <div class="item">
             <input type="checkbox" id="check2">
-            <label for="check2">Hola</label>
+            <label for="check2">Check one of them.</label>
         </div>
         <div class="item">
             <input type="checkbox" id="check3">
-            <label for="check3">Konnichiwa</label>
+            <label for="check3">Then hold the Shift key.</label>
         </div>
         <div class="item">
             <input type="checkbox" id="check4">
-            <label for="check4">Bon Jour</label>
+            <label for="check4">Check one of the lower item.</label>
         </div>
         <div class="item">
             <input type="checkbox" id="check5">
-            <label for="check5">Ni Hao</label>
+            <label for="check5">Every items in between should be checked.</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check6">
+            <label for="check5">This is written in vanilla JavaScript.</label>
+        </div>
+        <div class="item">
+            <input type="checkbox" id="check7">
+            <label for="check5">These work well!</label>
         </div>
     </div>
     <script src="js/main.js"></script>
